@@ -19,16 +19,15 @@
 
 package org.apache.druid.indexing.overlord.http;
 
-import com.google.common.collect.ImmutableSet;
 import org.apache.druid.audit.AuditManager;
-import org.apache.druid.client.ImmutableDruidDataSource;
+import org.apache.druid.indexing.overlord.Segments;
 import org.apache.druid.indexing.overlord.TaskMaster;
+import org.apache.druid.indexing.test.TestIndexerMetadataStorageCoordinator;
 import org.apache.druid.java.util.common.Intervals;
 import org.apache.druid.java.util.common.granularity.Granularities;
 import org.apache.druid.rpc.indexing.SegmentUpdateResponse;
 import org.apache.druid.segment.TestDataSource;
 import org.apache.druid.server.coordinator.CreateDataSegments;
-import org.apache.druid.server.coordinator.simulate.TestSegmentsMetadataManager;
 import org.apache.druid.server.http.SegmentsToUpdateFilter;
 import org.apache.druid.server.security.AuthConfig;
 import org.apache.druid.timeline.DataSegment;
@@ -55,7 +54,7 @@ public class OverlordDataSourcesResourceTest
                           .startingAt(WIKI_SEGMENTS_START)
                           .eachOfSizeInMb(500);
 
-  private TestSegmentsMetadataManager segmentsMetadataManager;
+  private TestIndexerMetadataStorageCoordinator storageCoordinator;
 
   private OverlordDataSourcesResource dataSourcesResource;
 
@@ -63,17 +62,17 @@ public class OverlordDataSourcesResourceTest
   public void setup()
   {
     AuditManager auditManager = EasyMock.createStrictMock(AuditManager.class);
-    segmentsMetadataManager = new TestSegmentsMetadataManager();
+    storageCoordinator = new TestIndexerMetadataStorageCoordinator();
 
     TaskMaster taskMaster = new TaskMaster(null, null);
     dataSourcesResource = new OverlordDataSourcesResource(
         taskMaster,
-        segmentsMetadataManager,
+        storageCoordinator,
         auditManager
     );
     taskMaster.becomeFullLeader();
 
-    WIKI_SEGMENTS_10X1D.forEach(segmentsMetadataManager::addSegment);
+    storageCoordinator.commitSegments(Set.copyOf(WIKI_SEGMENTS_10X1D), null);
   }
 
   @Test
@@ -91,11 +90,11 @@ public class OverlordDataSourcesResourceTest
   {
     Response response = dataSourcesResource.markSegmentAsUnused(
         TestDataSource.WIKI,
-        "someSegment"
+        "some<script>Segment"
     );
     Assert.assertEquals(400, response.getStatus());
     Assert.assertEquals(
-        "Could not parse Segment ID[someSegment] for DataSource[wiki]",
+        "Could not parse Segment ID[some&lt;script&gt;Segment] for DataSource[wiki]",
         response.getEntity()
     );
   }
@@ -113,7 +112,7 @@ public class OverlordDataSourcesResourceTest
   @Test
   public void testMarkSegmentsAsUnused_bySegmentIds()
   {
-    final Set<String> segmentIdsToUpdate = ImmutableSet.of(
+    final Set<String> segmentIdsToUpdate = Set.of(
         WIKI_SEGMENTS_10X1D.get(0).getId().toString(),
         WIKI_SEGMENTS_10X1D.get(8).getId().toString()
     );
@@ -191,6 +190,20 @@ public class OverlordDataSourcesResourceTest
   }
 
   @Test
+  public void testMarkSegmentAsUsed_withInvalidSegmentId()
+  {
+    Response response = dataSourcesResource.markSegmentAsUsed(
+        TestDataSource.WIKI,
+        "some<script>Segment"
+    );
+    Assert.assertEquals(400, response.getStatus());
+    Assert.assertEquals(
+        "Could not parse Segment ID[some&lt;script&gt;Segment] for DataSource[wiki]",
+        response.getEntity()
+    );
+  }
+
+  @Test
   public void testMarkAllNonOvershadowedSegmentsAsUsed()
   {
     // Create higher version segments
@@ -199,7 +212,7 @@ public class OverlordDataSourcesResourceTest
         segment -> DataSegment.builder(segment).version(version2).build()
     ).collect(Collectors.toList());
 
-    wikiSegmentsV2.forEach(segmentsMetadataManager::addSegment);
+    storageCoordinator.commitSegments(Set.copyOf(wikiSegmentsV2), null);
 
     // Mark all segments as unused
     Response response = dataSourcesResource.markAllSegmentsAsUnused(
@@ -215,11 +228,8 @@ public class OverlordDataSourcesResourceTest
     );
     verifyNumSegmentsUpdated(10, response);
 
-    final ImmutableDruidDataSource dataSource = segmentsMetadataManager
-        .getImmutableDataSourceWithUsedSegments(TestDataSource.WIKI);
-    Assert.assertNotNull(dataSource);
-
-    final Collection<DataSegment> usedSegments = dataSource.getSegments();
+    final Collection<DataSegment> usedSegments =
+        storageCoordinator.retrieveAllUsedSegments(TestDataSource.WIKI, Segments.INCLUDING_OVERSHADOWED);
     Assert.assertEquals(10, usedSegments.size());
     for (DataSegment segment : usedSegments) {
       Assert.assertEquals(version2, segment.getVersion());
@@ -279,7 +289,7 @@ public class OverlordDataSourcesResourceTest
   {
     dataSourcesResource.markAllSegmentsAsUnused(TestDataSource.WIKI, createHttpServletRequest());
 
-    final Set<String> segmentIdsToUpdate = ImmutableSet.of(
+    final Set<String> segmentIdsToUpdate = Set.of(
         WIKI_SEGMENTS_10X1D.get(0).getId().toString(),
         WIKI_SEGMENTS_10X1D.get(1).getId().toString()
     );
